# not-doing

./: .gitignore  .travis.yml  Makefile  Procfile  README.md  bower.json  not-doing.cabal
app/: Main.hs  Opts.hs  Types.hs  WebRoutes.hs
purs/: Main.purs
sass/: style.scss
specs/NotDoing/: TypesSpec.hs
src/: Main.purs
src/NotDoing/: Controllers.hs  Templating.hs  Types.hs
src/NotDoing/Actions/: Default.hs
static/css/: style.css
static/js/: main.js
templates/: foot.mustache  head.mustache  index.mustache
